more changes to layout/colors/fonts

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -43,7 +43,8 @@ a {
 #app {
 }
 
-html, body {
-  font-family: 'Open Sans', sans-serif;
+html, body, h1, h3 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 100;
   webkit-font-smoothing: antialiased;
 }
