--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -2,3 +2,13 @@
 /**
  * Basic typography style for copy text
  */
+
+
+ .label {
+     font-size: 25px;
+
+ }
+
+ .bold {
+     font-weight: 500;
+ }
