--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
 @import url('https://fonts.googleapis.com/css?family=Shrikhand');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300');
+@import url('https://fonts.googleapis.com/css?family=Raleway:200,400,500,800');
 
 // @import url('https://fonts.googleapis.com/css?family=family=Montserrat:400,300,700');
 
