--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -31,6 +31,19 @@
     background: #fff;
 }
 
+.section-title {
+    font-size: 1em;
+}
+
+.section-item {
+    font-size: 20px;
+}
+
+.different {
+    background-color: #2c3e50;
+    color: #fff;
+}
+
 
 
 
