--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -39,9 +39,9 @@
     font-size: 20px;
 }
 
-.different {
-    background-color: #2c3e50;
-    color: #fff;
+.skill {
+    margin-bottom:20px;
+
 }
 
 
