added cool particles effect to header section, changed some colors

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -16,6 +16,8 @@
 
     .jumbotron {
         margin-bottom: 0;
+        background: #000;
+        color: #fff;
     }
 
     
@@ -44,7 +46,18 @@
 
 }
 
+.my-particles {
+    position: fixed;
+    width: 100%;
+}
 
+a {
+    color: $brand-pink;
+}
 
+.badge-pink {
+    background-color: $brand-pink;
+
+}
 
 
