--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -18,6 +18,7 @@
         margin-bottom: 0;
         background: #000;
         color: #fff;
+        border-radius: 0;
     }
 
     
@@ -60,6 +61,24 @@ a {
 
 }
 
+@media(max-width: 380px){
+    .site-header h1 {
+        font-size: 2em;
+    }
 
+    canvas {
+        display:none;
+    }
+}
+
+@media(max-width: 940px){
+    .site-header h1 {
+        font-size: 3em;
+    }
+
+    .resume {
+        top: 500px;
+    }
+}
 
 
