--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,7 +36,8 @@
 // 6. Page-specific styles
 @import
   'pages/health',
-  'pages/home';
+  'pages/home',
+  'pages/spotify';  
   
 
 // 7. Themes
