commented out particles animation, added modal style, fixed issue with some playlists not loading

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,6 +26,7 @@
 // 5. Components
 @import
   'components/button',
+  'components/modal',
   'components/dropdowns',
   'components/navbar',
   'components/skill',
