--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -14,9 +14,10 @@
 
 /* Modal Content/Box */
 .modal-content {
+    border: 0;
+    border-radius: 0;
     background-color: #fefefe;
     margin: 15% auto; /* 15% from the top and centered */
-    border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
     overflow: auto;
 }
