--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -1,50 +1,35 @@
-/* The Modal (background) */
-.my-modal {
-    // display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+// /* The Modal (background) */
+
+.modal-overlay-div {
+    position: fixed;
+    display: flex;
+    top: 0;
+    right: 0;
+    bottom: 0;
     left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    height: 100%;
+    width: 100%;
+    z-index: 1000;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, .65);
 }
 
-/* Modal Content/Box */
-.modal-content {
-    border: 0;
-    border-radius: 0;
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    width: 80%; /* Could be more or less, depending on screen size */
+.modal-content-div {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    display:flex;
+    z-index: 10000;
     overflow: auto;
-}
-
-.modal-body {
-    max-height: 600px;
-}
-
-.modal-header {
-    position: sticky;
-    top: 0;
-    z-index: 9999;
-    background: #fff;
-    padding: 1em;
-}
-
-/* The Close Button */
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
+    justify-content: center;
     cursor: pointer;
+}
+
+.modal-dialog-div {
+    position: relative;
+    padding: 2em;
+    background: #fff;
+    
 }
