--- a/src/styles/layout/_containers.scss
+++ b/src/styles/layout/_containers.scss
@@ -13,3 +13,14 @@
 .no-border {
     border: 0;
 }
+
+
+.resume {
+    top: 250px;
+}
+
+.section {
+    min-height:300px;
+    padding-bottom: 150px;
+}
+  
