--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,3 +1,11 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
+
+.site-title {
+    font-size: 2em;
+}
+
+.site-subtitle {
+    font-size: 1em;
+}
