style updates, added followers to header

--- a/src/styles/layout/_breakpoints.scss
+++ b/src/styles/layout/_breakpoints.scss
@@ -11,6 +11,11 @@
     .modal-content-div{
       align-items: center;
     }
+
+    .modal-dialog-div {
+      width: 50%;
+      
+    }
   
     .card.spotify {
       max-width: 20em;
