--- a/src/styles/pages/_spotify.scss
+++ b/src/styles/pages/_spotify.scss
@@ -4,32 +4,13 @@
 
     .list-group {
         overflow: auto;
-        max-height: 400px;
+        max-height: 90%;
     }
 
     .header {
         color: white;
         padding: 1em;
     }
-
-    // .list-group-item {
-    //     background-color: #000;
-    // }
-
-    // .input-group-lg {
-    //     .form-control {
-    //         border-radius: 0;
-    //         background: #000;
-    //         color: white;
-    //         border: 0;
-    //     }
-    // }
-
-    // .card {
-    //     max-width: 150px;
-    //     background-color:inherit;
-    // }
-
 }
 
 .card.spotify {
