added error component added more handling

--- a/src/styles/pages/_spotify.scss
+++ b/src/styles/pages/_spotify.scss
@@ -30,7 +30,7 @@
         bottom: 10px;
         cursor: pointer;
     }
-    
+
 }
 
 
@@ -69,4 +69,8 @@
         background: #fff;
         color: #2ecc71;
     }
+}
+
+.error-page {
+    background: #fff;
 }
