added some metadata values to the playlist cards. Took a while to figure out how to chain promises for loading all the playlist data upfront.

--- a/src/styles/layout/_breakpoints.scss
+++ b/src/styles/layout/_breakpoints.scss
@@ -19,12 +19,21 @@
   
     .card.spotify {
       max-width: 20em;
+      margin: 20px auto;
+      
     }
 
     .spotify-page {
       .list-group {
           max-height: 600px;
       }
+
+      .header {
+        .col {
+          flex-grow: 0;
+        }
+      }
+
     }  
   
   }
