--- a/src/styles/pages/_spotify.scss
+++ b/src/styles/pages/_spotify.scss
@@ -11,6 +11,14 @@
         color: white;
         padding: 1em;
     }
+
+    .badge {
+        font-size: 100%;
+        padding: .75em;
+        width: 100%;
+        max-width: 10em;
+
+    }
 }
 
 .card.spotify {
@@ -73,4 +81,10 @@
 
 .error-page {
     background: #fff;
+}
+
+.badge-dance {
+    color: white;
+
+
 }
