--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -41,7 +41,7 @@ a {
 }
 
 html, body, h1, h3 {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Circular','Raleway', sans-serif;
   font-weight: 100;
   webkit-font-smoothing: antialiased;
 }
