--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -6,6 +6,12 @@
 @import url('https://fonts.googleapis.com/css?family=Shrikhand');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300');
 @import url('https://fonts.googleapis.com/css?family=Raleway:200,400,500,800');
+@import url('https://sp-bootstrap.global.ssl.fastly.net/8.0.0/fonts/circular-book.woff2');
+
+@font-face {
+    font-family: 'Circular';
+    src: url('https://sp-bootstrap.global.ssl.fastly.net/8.0.0/fonts/circular-book.woff2') format('woff2');
+}
 
 // @import url('https://fonts.googleapis.com/css?family=family=Montserrat:400,300,700');
 
