lots of updates! added a react-table that compiles all the users playlist tracks along with some interesting numbers. Style changes!

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -47,6 +47,7 @@ $dark-grey: rgb(68, 68, 68) !default;
 
 
 $spotify-green: #1db954;
+$background-spotify: #607D8B;
 
 
 /// Container's maximum width
