--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,6 +30,7 @@
   'components/dropdowns',
   'components/navbar',
   'components/skill',
+  'components/react-table',
   'components/parallax';
   
 
