--- a/src/styles/pages/_spotify.scss
+++ b/src/styles/pages/_spotify.scss
@@ -1,5 +1,9 @@
 .spotify-page {
-    background-color: #2ecc71;
+    background: #2b5876;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #4e4376, #2b5876);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #4e4376, #2b5876); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    color: white;
+    
 
     .list-group {
         overflow: auto;
@@ -7,7 +11,6 @@
     }
 
     .header {
-        color: white;
         padding: 1em;
     }
 
@@ -17,6 +20,10 @@
         width: 100%;
         max-width: 10em;
 
+    }
+
+    .container {
+        max-width: 1600px;
     }
 }
 
@@ -28,6 +35,7 @@
     transition: all .25s ease;
     padding: 0;
     width: 100%;
+    color:#000;
 
     .card-img-top {
         border-radius: 0;
@@ -55,6 +63,7 @@
     border-bottom: 1px solid $mid-grey;
     margin: 0;
     padding: .5em;
+    background: transparent;
 }
 
 .user-image {
@@ -86,4 +95,8 @@
     color: white;
 
 
+}
+
+.number {
+    text-align: right;
 }
