style update to playlist tile on mobile

--- a/src/styles/layout/_breakpoints.scss
+++ b/src/styles/layout/_breakpoints.scss
@@ -20,6 +20,10 @@
     .card.spotify {
       max-width: 20em;
       margin: 20px auto;
+      &:hover {
+        bottom: 10px;
+        cursor: pointer;
+    }
       
     }
 
@@ -35,5 +39,7 @@
       }
 
     }  
+
+    
   
   }
