site overhaul, icons

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -41,8 +41,9 @@ a {
 }
 
 html, body, h1, h3 {
-  font-family: 'Open Sans' sans-serif;
+  font-family: 'Helvetica', 'Open Sans', sans-serif;
   font-weight: 100;
   webkit-font-smoothing: antialiased;
+  
 }
 
