--- a/src/styles/base/_fonts.scss
+++ b/src/styles/base/_fonts.scss
@@ -8,5 +8,10 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:200,400,500,800');
 @import url('https://sp-bootstrap.global.ssl.fastly.net/8.0.0/fonts/circular-book.woff2');
 
+@font-face {
+    font-family: 'Futura';
+    src: url('/fonts/league-spartan-master/webfonts/leaguespartan-bold.woff') format('woff');
+}
+
 // @import url('https://fonts.googleapis.com/css?family=family=Montserrat:400,300,700');
 
