added back the spotify playlist analyzer

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -30,8 +30,7 @@
 .modal-dialog-div {
     position: relative;
     padding: 2em;
-    background: transparent;
+    background: #fff;
     width: 100%;
-    fill:white;
     
 }
